<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".contact">

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/con_info"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:gravity="center_horizontal"
        android:hint="@string/name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:padding="10dp">

        <TextView
            android:id="@+id/Location"
            android:layout_width="40dp"
            android:layout_height="43dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/address"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toEndOf="@+id/Location"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toEndOf="@+id/spinner_province"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background"
        android:padding="6dp">

        <TextView
            android:id="@+id/text_sche"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/clock"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="Hour"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/text_sche"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toEndOf="@+id/hour"
            app:layout_constraintTop_toTopOf="@+id/text_sche" />

        <TextView
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="Minute"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/spinner_hours"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner_hours"
            android:layout_alignTop="@+id/spinner_hours"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toEndOf="@+id/minute"
            app:layout_constraintTop_toTopOf="@+id/text_sche" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/weather"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_Wea"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Weather"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/btn_Wea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_Wea"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/news"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_news"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="News"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/btn_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_news"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_background">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/covid"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_cov"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Covid-19"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/btn_cov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_cov"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/text_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Finish"
        android:textSize="15sp" />

    <Button
        android:id="@+id/text_del"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Delete"
        android:textSize="15sp" />

</LinearLayout>